--- a/main.tex
+++ b/main.tex
@@ -108,6 +108,7 @@
 \input{Parts/07ProductieEnKosten.tex}
 \input{Parts/08VolmaakteMededinging.tex}
 \input{Parts/09Monopolie.tex}
+\input{Parts/10OnvolmaakteMededingingEnProductdifferentiatie.tex}
 
 
 \end{document}
