--- a/Parts/00Voorwoord.tex
+++ b/Parts/00Voorwoord.tex
@@ -1,6 +1,6 @@
 \section*{Voorwoord}
 Aangezien ik veronderstel dat toch een aantal mensen deze samenvatting gaan gebruiken, misschien nog wat dingen die interessant zijn om weten.
 
-Vooraleerst, ik heb deze samenvatting voor mezelf gemaakt. Dat wil zeggen dat ik er uit heb gelaten wat ik evident vind of reeds kende. In die zin ga ik mee met de filosofie dat een samenvatting iets persoonlijks is en dat, indien je goed wil scoren op dit vak, misschien moet overwegen.
+Een samenvatting is iets persoonlijks, dus in dat opzicht kan het zijn dat ik dingen heb weggelaten die mij logisch leken, waar anderen deze wel zouden toegevoegd hebben. Dit zal echter niet zo vaak het geval zijn.
 
-Dat gezegd zijnde, in de tekst zal ik waarschijnlijk veelvuldig refereren naar de slides of het boek (Economie, een inleiding). De slides zijn deze van professor De Bruyne uit het academiejaar 2014-2015 en het boek is de versie van 2010.
+In de tekst zal ik waarschijnlijk veelvuldig refereren naar de slides of het boek (Economie, een inleiding). De slides zijn deze van professor De Bruyne uit het academiejaar 2014-2015 en het gebruikte boek is de versie van 2010.
