--- a/Parts/02MensenInstitutiesEnMarkten.tex
+++ b/Parts/02MensenInstitutiesEnMarkten.tex
@@ -19,6 +19,7 @@ Maar hoe het evenwicht van een individu vinden? Ofwel via individuele beslissing
 Geen onderlinge afhankelijkheid tussen de econ. agenten, geen rekening houden met de evt. reacties van anderen.
 
 \subsubsection{Sociale Interacties}
+\label{sssec:socialeInteracties}
 Wel reacties van andere econ. agenten op elkaars gedrag. Individueel gedrag nu moeilijker te achterhalen $\rightarrow$ \textbf{speltheorie}.
 Individueel optimum valt echter niet altijd samen met maatschappelijk optimum. Soms zijn hiervoor soms informele sociale instituties (bindende afspraken \& sociale normen) nodig, of tussenkomen v/d overheid, indien sociale normen geen \textbf{Nash-evenwicht} bekomen.
 
