--- a/Parts/10OnvolmaakteMededingingEnProductdifferentiatie.tex
+++ b/Parts/10OnvolmaakteMededingingEnProductdifferentiatie.tex
@@ -21,9 +21,38 @@ Meestal zullen ondernemingen niet simultaan beslissen, maar zijn er een leider e
 
 
 \subsection{Oligopolie en Speltheorie}
+De wederzijdse be\"invloeding in een oligopolie maakt dat we de markt ook kunnen analyseren aan de hand van spelteorie. Indien zoals voorheen geconcurreerd wordt via productievolumes, worden deze de mogelijke strategie\"en, er zijn er dan oneindig veel, en we zullen een Nash-evenwicht vinden in het punt waar we voorheen ook al het Cournot-evenwicht vonden.
+
+Er kan ook geconcurreerd worden a.d.h.v. de prijs. In dit geval speelt de \textbf{paradox van Bertrand}. Indien alle ondernemingen dezelfde kostenstructuur hebben, zal de prijs dalen tot niemand nog winst maakt. Er wordt dus een resultaat gelijkwaardig aan dat van perfecte mededinging gerealiseerd terwijl slechts een klein aantal ondernemingen aanbieden.
+
+Indien de ondernemingen niet dezelfde kostenstructuur hebben, zal degene met de laagste kostenstructuur de anderen wegconcurreren en er blijft een monopolie over.
 
 \subsection{Productdifferentiatie}
 \subsubsection{Monopolistische Mededinging}
-=geen homogene goederen(productdifferentiatie) = markt van gelijkaardige goederen die hetzelfde nut vervullen.
+Dit is de vierde marktvorm die besproken wordt en is een combinatie van monopolie en vrije mededinging. Het is een markt waar \textbf{heterogene goederen}(productdifferentiatie), die hetzelfde nut vervullen, verhandeld worden en zorgt ervoor dat alle ondernemingen prijszetters zijn. Er zijn wel veel aanbieders en vragers, vrije toe- en uittreding en er speelt geen interdependentie tussen de verschillende ondernemingen.
+
+De vraagcurve is elastischer(vlakker) dan bij monopolie, maar niet perfect elastisch zoals bij vrije mededinging. Prijsveranderingen hebben dus meer effect dan bij monopolie, aangezien er nu goede substituten zijn. De prijszetting verloopt analoog aan het geval bij monopolie, zoals je kan zien in figuur~\ref{fig:prijszettingMCopKT}.
+
+\begin{figure}[htbp]
+   \centering
+   \includegraphics[scale=0.4]{Images/white.png}
+   \caption{Prijszetting bij monopolistische concurrentie op KT (slide 22)}
+   \label{fig:prijszettingMCopKT}
+\end{figure}
+
+Op lange termijn kunnen we er van uitgaan dat de vraagcurve vlakker wordt, zie figuur~\ref{fig:prijszettingMCopLT}, omdat zo lang winst gemaakt wordt, er nieuwe ondernemingen bij zullen komen. Met elke onderneming die er zo bij komt, neemt het aantal substituten toe voor alle andere ondernemingen en zal de vraag bij elke onderneming ook elastischer worden. Er zal dan een rusttoestand bereikt worden wanneer er geen winst meer gemaakt wordt.
+
+\begin{figure}[htbp]
+   \centering
+   \includegraphics[scale=0.4]{Images/white.png}
+   \caption{Prijszetting bij monopolistische concurrentie op LT (slide 24)}
+   \label{fig:prijszettingMCopLT}
+\end{figure}
 
 \subsubsection{Heterogeen Oligopolie: Model van Hotelling}
+Een heterogeen oligopolie is een markt van monopolistische concurrentie, met de wijziging dat er slechts een klein aantal aanbieders zijn. Er komt dus nog onderlinge afhankelijkheid voor de strategie van de ondernemingen bij. Om dit te analyseren gebruiken we het \textbf{model van Hotelling}.
+\todo[inline]{TODO: meer schrijven over Hotelling}
+
+
+\subsection{Asymmetrische Informatie}
+We hadden het reeds over asymmetrische informatie in sectie~\ref{sssec:socialeInteracties} met het voorbeeld over de markt voor tweedehandswagens. Een ander voorbeeld is dat van verzekeringen. De verzekeringsnemer kent daar niet de gemiddelde risico's die de verzekeraar wel kent.
