--- a/Parts/00Voorwoord.tex
+++ b/Parts/00Voorwoord.tex
@@ -4,3 +4,5 @@ Aangezien ik veronderstel dat toch een aantal mensen deze samenvatting gaan gebr
 Een samenvatting is iets persoonlijks, dus in dat opzicht kan het zijn dat ik dingen heb weggelaten die mij logisch leken, waar anderen deze wel zouden toegevoegd hebben. Dit zal echter niet zo vaak het geval zijn.
 
 In de tekst zal ik waarschijnlijk veelvuldig refereren naar de slides of het boek (Economie, een inleiding). De slides zijn deze van professor De Bruyne uit het academiejaar 2014-2015 en het gebruikte boek is de versie van 2010.
+
+De meest recente versie van deze samenvatting kan je vinden op \url{https://github.com/HerrSubset/SamenvattingMarktenEnPrijzen}.
