--- a/main.tex
+++ b/main.tex
@@ -109,6 +109,7 @@
 \input{Parts/08VolmaakteMededinging.tex}
 \input{Parts/09Monopolie.tex}
 \input{Parts/10OnvolmaakteMededingingEnProductdifferentiatie.tex}
+\input{Parts/11DeArbeidsmarkt.tex}
 
 
 \end{document}
