--- a/Parts/11DeArbeidsmarkt.tex
+++ b/Parts/11DeArbeidsmarkt.tex
@@ -26,7 +26,7 @@ Hieruit volgt dat het evenwicht zal liggen in $p = \frac{w}{MFP_L}$. We kunnen n
 \begin{equation}
    w = p \times MFP_L = MWP_L
 \end{equation}
-waarbij $MWP_L$ de \textbf{Marginale Waardeproductiviteit van Arbeid} is. Het loon zal dus gelijk zijn aan de waarde van de output die \'e\'en extra eenheid arbeid produceert. Als we $w$ in functie van $L$ (de $L$ die de winst optimaliseert) uitzetten in een grafiek, bekomen we figuur~\ref{fig:vraagNaarArbeid}. Deze figur is niets anders dan de vraagcurve van arbeid.
+waarbij $MWP_L$ de \textbf{Marginale Waardeproductiviteit van Arbeid} is. Het loon zal dus gelijk zijn aan de waarde van de output die \'e\'en extra eenheid arbeid produceert. Als we $w$ in functie van $L$ (de $L$ die de winst optimaliseert) uitzetten in een grafiek, bekomen we figuur~\ref{fig:vraagNaarArbeid}. Deze figuur is niets anders dan de vraagcurve van arbeid.
 
 \begin{figure}[htbp]
    \centering
