--- a/main.tex
+++ b/main.tex
@@ -15,6 +15,7 @@
 \usepackage{fix-cm}
 \usepackage{scrtime}
 \usepackage[colorinlistoftodos]{todonotes}
+\usepackage{multirow}   %cell spanning multiple rows in table
 
 
 \author{Pieter-Jan Smets}
@@ -110,6 +111,7 @@
 \input{Parts/09Monopolie.tex}
 \input{Parts/10OnvolmaakteMededingingEnProductdifferentiatie.tex}
 \input{Parts/11DeArbeidsmarkt.tex}
+\input{Parts/12PubliekeGoederenEnExterneEffecten.tex}
 
 
 \end{document}
