--- a/Parts/12PubliekeGoederenEnExterneEffecten.tex
+++ b/Parts/12PubliekeGoederenEnExterneEffecten.tex
@@ -131,5 +131,49 @@ Stel dat de uitstootnorm ergens tussen de twee optimale productieniveau's ligt, 
 
 Een nodige voorwaarde voor het optimum is dus dat de marginale kosten, en dus de inspanning, voor elke onderneming gelijk zijn. Dit is het \textbf{equimarginaal kostenprincipe}. Als dit niet bereikt is zou voor dezelfde kostprijs een lagere uitstoot gerealiseerd worden. Stel dat een onderneming meer inspanning doet, tot een hogere $MK$ gaat m.a.w., dan zou een stuk van deze inspanning beter naar een andere onderneming gaan. Zij kunnen namelijk dezelfde reductie in vervuiling doorvoeren voor een lagere prijs. Dit is wederom een voorbeeld van \textbf{kosteneffici\"entie}.
 
-\subsubsection{Outputbelasting}
-Er zou een outputbelasting gehoffen kunnen worden die het externe effect reflecteert. Bijgevolg zal $MK$ dan samenvallen met $MMK$.
+\subsubsection{Belastingen}
+Er zou een \textbf{outputbelasting} gehoffen kunnen worden die het externe effect reflecteert. Bijgevolg zal $MK$ dan samenvallen met $MMK$.
+
+Indien de vervuiling goed te defini\"eren/meten valt, kan er ook een \textbf{belasting op de vervuildende factor} geheven worden.
+
+Zoals in figuur~\ref{fig:outputBelasting} te zien is, wordt de belasting dan gelijk gesteld aan $MMB_{tv}$. De kost om de belasting terug te dringen is dan $MK$, maar het levert een grotere belastingsvermindering op, tot in het punt waar $MK = t$. De producent zal dus geneigd zijn de productie terug te schroeven tot in het optimum.
+
+\begin{figure}[htbp]
+   \centering
+   \includegraphics[scale=0.4]{Images/white.png}
+   \caption{Outputbelasting (slide 31)}
+   \label{fig:outputBelasting}
+\end{figure}
+
+Dit punt voldoet dan aan het \textbf{equimarginaal kostenprincipe}, voor alle bedrijven zal gelden dat $MK = t$.
+
+\subsubsection{Verhandelbare Emissierechten}
+Elke onderneming krijgt toestemming om een bepaalde hoeveelheid uit te stoten, maar deze hoeveelheden zijn verhandelbaar. Stel dat elke onderneming even veel rechten krijgt, in figuur~\ref{fig:verhandelbareEmissierechten} komt dit overeen met een uitstoot van $OK = \frac{OQ_1 + OQ_2}{2}$. De prijs van de emissierechten zal dan op $MMB_{tv}$ komen te liggen.
+\begin{figure}[htbp]
+   \centering
+   \includegraphics[scale=0.4]{Images/white.png}
+   \caption{Verhandelbare emissierechten (slide 35)}
+   \label{fig:verhandelbareEmissierechten}
+\end{figure}
+Onderneming 1 zal dan dus $Q_1K$ verkopen aan de makrtprijs, en zal winst $MEF$ maken (het gebied onder $MK$ zijn de kosten voor het terugdringen v/d vervuiling). Onderneming 2 daarentegen zal $KQ_2$ kopen en door deze aankoop het gebied $GNE$ winnen.
+
+Het pareto optimum zal dus bereikt worden, mits de totale vervuiling in het optimum gekend is, en de totaal toegelaten uitstoot hieraan gelijk is. $MK$ is namelijk overal gelijk aan $p$.
+
+Waarom het is dat de prijs steeds gelijk is aan $MMB_{tv}$ zie je in figuur~\ref{}.
+
+\begin{figure}[htbp]
+   \centering
+   \includegraphics[scale=0.4]{Images/white.png}
+   \caption{Prijsvorming emissierechten (slide 40)}
+   \label{fig:prijsvormingEmissierechten}
+\end{figure}
+
+Hoe de emissierechten verdeeld wordt over de ondernemingen maakt ook niet uit, dit evenwicht zal steeds tot stand komen.
+
+\subsection{Publieke Voorziening van Private Goederen}
+Soms zal de overheid subsiedies voor private goederen zoals onderwijs en gezondheidszorg geven, of zelfs de productie voor zijn rekening nemen. Mogelijke motieven:
+\begin{itemize}
+   \item Externe effecten mee in rekening brengen op de markt
+   \item Verdeling
+   \item Verdienstengoederen: voorkeuren van consumenten be\"invloeden (vb subsidies voor opera om er mensen heen te lokken).
+\end{itemize}
