--- a/main.tex
+++ b/main.tex
@@ -112,6 +112,7 @@
 \input{Parts/10OnvolmaakteMededingingEnProductdifferentiatie.tex}
 \input{Parts/11DeArbeidsmarkt.tex}
 \input{Parts/12PubliekeGoederenEnExterneEffecten.tex}
+\input{Parts/13VerdelingEnHerverdeling.tex}
 
 
 \end{document}
