--- a/Parts/00Voorwoord.tex
+++ b/Parts/00Voorwoord.tex
@@ -1,7 +1,7 @@
 \section*{Voorwoord}
-Aangezien ik veronderstel dat toch een aantal mensen deze samenvatting gaan gebruiken, misschien nog wat dingen die interessant zijn om weten.
+Aangezien ik deze samenvatting niet enkel voor mezelf wil houden, eerst nog wat dingen die interessant zijn om weten.
 
-Een samenvatting is iets persoonlijks, dus in dat opzicht kan het zijn dat ik dingen heb weggelaten die mij logisch leken, waar anderen deze wel zouden toegevoegd hebben. Dit zal echter niet zo vaak het geval zijn.
+Een samenvatting is iets persoonlijks, dus in dat opzicht kan het zijn dat ik dingen heb weggelaten die mij logisch leken, waar anderen deze wel zouden toegevoegd hebben. Ik veronderstel dat er geen al te grote hiaten zijn, maar hou hier toch rekening mee.
 
 In de tekst zal ik waarschijnlijk veelvuldig refereren naar de slides of het boek (Economie, een inleiding). De slides zijn deze van professor De Bruyne uit het academiejaar 2014-2015 en het gebruikte boek is de versie van 2010.
 
