--- a/Parts/04ElasticiteitenEnSchokken.tex
+++ b/Parts/04ElasticiteitenEnSchokken.tex
@@ -119,7 +119,7 @@ In tegenstelling tot de prijselasticiteit van de vraag is $\varepsilon^{A}_{p} =
 \begin{figure}[htbp]
 	\centering
 	\includegraphics[scale=0.4]{Images/white.png}
-	\caption{Aanbodschok met een perfect inelastische, een normale en een perfect elastische vraag (slide 26)}
+	\caption{Aanbodschok onder verschillende vraagcurves (slide 26)}
 	\label{fig:aanbodschok}
 \end{figure}
 
