--- a/Parts/13VerdelingEnHerverdeling.tex
+++ b/Parts/13VerdelingEnHerverdeling.tex
@@ -45,3 +45,97 @@ Kan gedefini\"eerd worden op twee manieren:
 Er zijn verschillende methodes om zo'n relatieve armoedegrens te bepalen (slide 23). Het probleem daarmee is dat ze allemaal arbitrair zijn, maar het blijft wel relatief waardoor er over landen heen vergeleken kan worden.
 
 Merk ook op dat de Gini-co\"effici\"ent misschien niets over armoede, maar als je landen gaat rangschikken volgens deze Gini-co\"effici\"ent en de armoede zie je wel dat er een zekere correlatie bestaat.
+
+\subsection{Belastingen}
+\label{ssec:belastingen}
+Belastingen hebben drie voorname functies:
+\begin{itemize}
+   \item Financiering van publieke goederen
+   \item gedrag van agenten be\"invloeden (vb. taksen op sigaretten)
+   \item inkomensverdeling
+\end{itemize}
+Van alle geïnde belastingen zijn er drie belangrijke bronnen:
+\begin{description}
+   \item[Indirecte belastingen]: op productie, consumptie en import
+   \item[Directe belastingen]:  op inkomen en vermogen
+   \item[Bijdragen aan sociale zekerheid]: belasting op arbeid
+\end{description}
+
+Inkomensbelasting wordt meestal ge\"ind in schijven/barema's waarbij er een verschillende \textbf{marginale aanslagvoet} per schijf aangerekend wordt. Deze aanslagvoet stijgt naarmate men zich in hogere schijven bevindt. De \textbf{gemiddelde aanslagvoet} zal in dat geval ook toenemen. We spreken in dit geval ook van een \textbf{progressieve} belasting.
+
+Wanneer de gemiddelde aanslagvoet zou dalen naarmate het inkomen hoger is, spreekt men van een \textbf{regressieve} belasting. Bij een constante gemiddelde aanslagvoet is de belasting \textbf{proportioneel}.
+
+Bij een \textbf{vlaktaks} (flat tax rate) zou het ook kunnen voorkomen dat er een \textbf{negatieve inkomensbelasting} ontstaat (zie figuur~\ref{fig:vlaktaks}). Dit is het geval als er slechts vanaf een bepaald inkomen belastingen betaald moeten worden. Mensen onder dit inkomensniveau krijgen dan geld tot ze op dit inkomensniveau zitten. Dit is een eenvoudig voorbeeld van hoe belastingen herverdelend kunnen werken. Merk op dat deze vorm van vlaktaks nog steeds progressief en niet proportioneel is dankzij de belastingsvrije som.
+\begin{figure}[htbp]
+   \centering
+   \includegraphics[scale=0.4]{Images/white.png}
+   \caption{Vlaktaks en negatieve inkomensbelasting (slide 32 \& 33)}
+   \label{fig:vlaktaks}
+\end{figure}
+
+Bij een goede belasting geldt \textbf{horizontale} en \textbf{verticale gelijkheid}. Verticale gelijkheid stelt dat de sterkere schouders meer lasten moeten dragen (proportionele belastingen). Horizontale gelijkheid stelt dat belastingsplichtigen in dezelfde omstandigheden even veel moeten bijdragen.
+
+\subsection{Sociale Zekerheid}
+De sociale zekerheid is naast de belastingen een ander belangrijk herverdelingssysteem. Dit systeem gaat inkomenstransfers doorvoeren naar mensen die door tegenslag minder of geen inkomen hebben. Het is bijgevolg een soort verzekering.
+
+Er bestaat een opdeling tussen volgende stelsels:
+\begin{description}
+   \item[Bismarck-stelsel]:
+      \begin{itemize}
+         \item Financiering via sociale bijdragen
+         \item inbreng van sociale partners in beheer v/h systeem
+         \item klemtoon op verzekeringselement (bijdragen en uitkeringen, wederkerigheid)
+      \end{itemize}
+   \item[Beveridge-stelsel]:
+      \begin{itemize}
+         \item Overheid speelt grotere rol bij financiering (en gaat dus via belastingen)
+         \item Nadruk op solidariteit en herverdeling
+      \end{itemize}
+\end{description}
+
+\subsubsection{Basisprincipes van de Sociale Zekerheid}
+De sociale zekerheid is eerst en vooral een \textbf{verzekering}. Je krijgt de garantie dat je vergoed wordt via een \textbf{inkomensvervangende uitkering} indien je vooraf \textbf{premies} betaalde. Een verzekeringscontract impliceert dus \textbf{wederkerigheid}.
+
+Een zuivere verzekering werkt ook herverdelend nadat het  risico zich heeft voorgedaan(\textit{ex post}). De mensen die het goed hebben betalen voor de mensen die het minder goed hebben.
+
+Bij een zuivere verzekering treden mensen ook \textbf{ex ante} toe, voordat ze weten wie door het risico getroffen zal worden. Aangezien dit vrijwillig gebeurt moet het wel een pareto-verbetering zijn voor iedereen, maar waarom organiseert de private markt de sociale zekerheid dan niet?
+
+De drie voornaamste redenen zijn:
+\begin{itemize}
+   \item Sommige risico's hebben een \textbf{collectieve} component: bvb. bij werkloosheid is er een collectieve component: de conjunctuur. Het risico is dus niet onafhankelijk. Verzekeraars zullen dan op bepaalde periodes meer moeten uitkeren en nieuwe verzekeraars concurreren de oude weg die nog met oude, opgestapelde schadegevallen zitten.
+   \item \textbf{Averechtse selectie}: gelijkaardig aan het voorbeeld met de tweedehandswagens (sectie~\ref{sssec:socialeInteracties}), speelt ook hier \textbf{asymetrische informatie}. Omdat de verzekeraar zijn premie baseert op een gemiddeld risico, zullen de mensen die weten dat ze een laag risico hebben uit de verzekering stappen omdat ze vinden dat ze te veel betalen. Dit drijft de gemiddelde premie op en het fenomeen herhaalt zich tot alleen de personen met het grootste risico overblijven en de markt verdwijnt. De overheid kan echter iedereen opleggen om bijdragen te betalen.
+   \item \textbf{Moral hazard}: Wie verzekerd is gedraagt zich anders dan wie niet verzekerd is. Zo zal iemand met een brandverzekering minder voorzorgen nemen tegen brand dan iemand zonder zo'n verzekering. De overheid heeft echter een groter instrumentarium om dit gedrag (gedeeltelijk) tegen te gaan.
+\end{itemize}
+
+Bij de sociale zekerheid geldt een soort van \textbf{verplichte solidariteit}, en dit in drie vormen.
+
+\paragraph{Subsidi\"erende solidariteit} In een private markt zouden, indien het mogelijk is, verschillende categorie\"en ontstaan voor mensen met een verschillend risico. Bij de sociale zekerheid is dit echter niet zo, dus ouderen en mensen waarvan men ziet dat ze een verhoogde kans hebben tot een genetische aandoening betalen nog steeds dezelfde bijdrage als iemand anders. Dit zorgt dus voor een \textbf{ex post} verdeling.
+
+\paragraph{Inkomenssolidariteit} Zoals we voorheen (sectie~\ref{sssec:socialeInteracties}) zagen zal men willen dat de sterkste schouders meer lasten dragen. Mensen met een hoger inkomen zullen dus meer bijdragen en dit kan door de overheid afgedwongen worden. Dit zorgt er echter voor dat de \textbf{wederkerigheid} gevoelig afgezwakt wordt.
+
+\paragraph{Mix solidariteit en verzekering} Sommige takken de sociale zekerheid hebben enkel als doel armoede te bestrijden en zijn dus een bijstandssysteem. Dit wijkt dus af van het verzekeringsprincipe, mensen die nooit hebben bijgedragen zullen toch nog een uitkering kunnen ontvangen.
+
+Het lijkt dus moeilijk om wederkerigheid en solidariteit te balanceren.
+
+\subsubsection{Uitdagingen voor de Sociale Zekerheid}
+
+\paragraph{Werkloosheidsuitkeringen} Dankzij moral hazard kunnen werkloosheidsuitkeringen een oplossing vinden voor het werkloosheidsprobleem moeilijker maken. Het is dus moeilijk een evenwicht te vinden tussen het toedienen van prikkels om een job te vinden en het verzekeringsprincipe.
+
+\paragraph{Pensioenen en Vergrijzing} Er zijn twee manieren waarop pensioenen gefinancierd kunnen worden. Via \textbf{kapitalisatie} belegt elke generatie zijn geld op de financi\"ele markten om later te gebruiken. Elke generatie spaart dus voor zichzelf.
+
+Dit levert echter problemen op bij een zware financi\"ele crisis, vandaar het \textbf{repartitieprincipe}, waarbij de huidige generatie werkenden de pensioenen van de gepensioneerden op dat moment betalen. Dit is echre gevoelig voor \textbf{vergrijzing}, wat in de toekomst een groot probleem zal zijn.
+
+Oplossingen hiervoor zijn onder andere de pensioenuitkering verlagen, mensen langer laten werken en de pensioenbijdragen van de werkenden verhogen.
+
+\paragraph{Ziekteverzekering} In de ziekteverzekering is er het probleem dat ontstaat doordat artsen per prestatie vergoed worden. Ze zijn dus geneigd om pati\"enten vaker terug te laten komen, wat de kostprijs opdrijft.
+
+Het alternatief, een maandwedde voor artsen, zou de artsen echter prikkelen om minder hard te werken, hun loon staat toch vast. Beide mogelijkheden hebben dus hun voor- en nadelen.
+
+Een ander probleem is ook de snelle technologische vooruitgang die dure behandelingen mogelijk maakt waardoor onze levensverwachting ook toeneemt.
+
+Vergrijzing is dan ook het laaste punt. De toegenomgen levensverwachting zal er ook voor zorgen dat mensen gedurende hun leven vaker naar de dokter gaan. Er zijn ook meer oudere mensen, die vaker medische zorg nodig hebben. Dit alles drijft de kost voor ziekteverzekering omhoog.
+
+\subsection{Herverdeling Heeft een Prijs}
+Tot nu gingen we er impliciet van uit dat herverdeling geen effect had op de totaal te verdelen welvaart. Het herverdelingssysteem zal echter voor een afname van de totale welvaart zorgen. Inkomensbelasting zal er bijvoorbeeld voor zorgen dat minder mensen hun arbeid zullen aanbieden. Er is een ontmoedigingseffect dat agenten minder zal doen werken om belastingen te ontlopen.
+
+Ook bij het probleem van moral hazard werd reeds gezegd dat dit fenomeen een gedragsreactie teweeg bracht. Ook deze reacties zullen invloed hebben op de te verdelen welvaart.
