--- a/Parts/00Voorwoord.tex
+++ b/Parts/00Voorwoord.tex
@@ -1,6 +1,8 @@
 \section*{Voorwoord}
 Aangezien ik deze samenvatting niet enkel voor mezelf wil houden, eerst nog wat dingen die interessant zijn om weten.
 
+De witte blokken doorheen de ganse tekst zijn vrij gelaten om grafieken te tekenen. Er staat altijd een onderschrift bij, met meestal ook het slidenummer naar waar je de desbetreffende grafiek kan vinden.
+
 Een samenvatting is iets persoonlijks, dus in dat opzicht kan het zijn dat ik dingen heb weggelaten die mij logisch leken, waar anderen deze wel zouden toegevoegd hebben. Ik veronderstel dat er geen al te grote hiaten zijn, maar hou hier toch rekening mee.
 
 In de tekst zal ik waarschijnlijk veelvuldig refereren naar de slides of het boek (Economie, een inleiding). De slides zijn deze van professor De Bruyne uit het academiejaar 2014-2015 en het gebruikte boek is de versie van 2010.
