changed some files to fit new repo name

--- a/main.tex
+++ b/main.tex
@@ -42,10 +42,11 @@
 % ------------------------------------------------------------------------------
 % Metadata (Change this)
 % ------------------------------------------------------------------------------
-\title{	\fontsize{50}{60}\selectfont
+\title{	\fontsize{40}{60}\selectfont
 			\vspace*{0.7cm}
 			\hfill Samenvatting 		\\[0.8cm]
-			\hfill Markten \&	Prijzen\\[0.8cm]%
+			\hfill Economie: Een Inleiding\\[0.8cm]%
+            %\hfill Een Inleiding\\[0.8cm]
 		}
 
 \author{
@@ -100,6 +101,9 @@
 % ------------------------------------------------------------------------------
 
 \input{Parts/00Voorwoord.tex}
+
+\newpage
+\part{Markten en Prijzen}
 \input{Parts/01WaaroverEnHoeDenkenEconomen.tex}
 \input{Parts/02MensenInstitutiesEnMarkten.tex}
 \input{Parts/03VraagEnAanbod.tex}
@@ -113,6 +117,9 @@
 \input{Parts/11DeArbeidsmarkt.tex}
 \input{Parts/12PubliekeGoederenEnExterneEffecten.tex}
 \input{Parts/13VerdelingEnHerverdeling.tex}
+
+\newpage
+\part{De Globale Economie}
 
 
 \end{document}
